# human-mri-preprocess

./: IRC805_dicom_converter.py  pyproject.toml
dicom/: bids.py  dicom_convert.py
fs/: freesurfer.py
