[project]
name = "human-mri-preprocess"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "nibabel>=5.3.2",
    "nipype>=1.10.0",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "scipy>=1.16.2",
    "spyder-kernels>=3.1.0",
]
